FIX: Identity pages text alignment was to the left (#1404)
Put back original center alignment.

--- a/backend/Origam.Server/assets/identity/css/main.css
+++ b/backend/Origam.Server/assets/identity/css/main.css
@@ -281,7 +281,7 @@ div.input-row a.btn{
 }
 
 #page-container{
-  display: block;
+  display: flex;
 }
 
 #browserLinks a{
